--- a/packages/elements/picture/package.json
+++ b/packages/elements/picture/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@codin/picture",
-  "version": "0.0.1",
+  "name": "@codin/cwc-picture",
+  "version": "0.0.2",
   "description": "wrapper for images",
   "author": "Odin thomas Rochmann",
   "license": "MIT",
-  "private": true,
-  "main": "dist/picture.js",
+  "private": false,
+  "main": "dist/picture.bundled.js",
   "module": "dist/picture.mjs",
-  "jsnext:main": "dist/picture.mjs",
+  "jsnext:main": "picture.js",
   "files": [
     "package.json",
     "LICENSE",
@@ -27,7 +27,6 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "polymer-cli": "^1.8.0",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-filesize": "^4.0.1",
     "rollup-plugin-node-resolve": "^3.4.0",
