--- a/utils/event-observer/package.json
+++ b/utils/event-observer/package.json
@@ -22,7 +22,6 @@
     "build": "cwc-builder"
   },
   "devDependencies": {
-    "@codin/rollup-cwc": "^0.0.1",
-    "@webcomponents/webcomponentsjs": "^2.1.3"
+    "@codin/rollup-cwc": "^0.0.1"
   }
 }
