--- a/package.json
+++ b/package.json
@@ -11,22 +11,40 @@
     "type": "git",
     "url": "git@github.com:odinr/codin.git"
   },
+  "scripts": {
+    "bootstrap": "npm install && lerna bootstrap && npm run build",
+    "build": "npm run build:typescript -- --verbose",
+    "build:typescript": "tsc --build packages/**/tsconfig.json",
+    "clean": "del-cli packages/*/node_modules packages/*/package-lock.json && npm run clean:typescript",
+    "clean:typescript": "npm run build:typescript -- --clean",
+    "dev": "polyserve --npm --module-resolution=node",
+    "watch": "npm run build:typescript -- -w",
+    "update": "lerna-update-wizard"
+  },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "lerna": "^2.11.0",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "ajv": "^6.10.2",
+    "del-cli": "^2.0.0",
+    "lerna": "^3.16.4",
+    "lerna-update-wizard": "^0.16.0",
     "lodash.camelcase": "^4.3.0",
-    "rollup": "^1.1.2",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-filesize": "^6.0.1",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-progress": "^1.0.0",
-    "rollup-plugin-size-snapshot": "^0.8.0",
-    "rollup-plugin-sizes": "^0.4.2",
-    "rollup-plugin-terser": "^4.0.4",
-    "tslib": "^1.9.3"
+    "polyserve": "^0.27.15",
+    "rollup": "^1.19.3",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-filesize": "^6.1.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-progress": "^1.1.1",
+    "rollup-plugin-size-snapshot": "^0.10.0",
+    "rollup-plugin-sizes": "^0.5.1",
+    "rollup-plugin-terser": "^5.1.1",
+    "tslib": "^1.10.0"
   },
   "_later": {
     "doc": "typedoc --target es6 --mode modules --excludeNotExported --excludePrivate --ignoreCompilerErrors --out ./docs src"
+  },
+  "dependencies": {
+    "gulp": "^4.0.2"
   }
 }
