--- a/packages/picture/package.json
+++ b/packages/picture/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@codin/cwc-image",
+  "name": "@codin/cwc-picture",
   "version": "0.1.0",
   "description": "",
   "author": "Odin thomas Rochmann",
@@ -19,7 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/odinr/codin/packages/image/"
+    "url": "https://github.com/odinr/codin/packages/picture/"
   },
   "publishConfig": {
     "access": "public"
