chore: upgraded packages

--- a/package.json
+++ b/package.json
@@ -12,33 +12,31 @@
     "url": "git@github.com:odinr/codin.git"
   },
   "scripts": {
-    "bootstrap": "npm install && lerna bootstrap && npm run build",
+    "bootstrap": "npm install && lerna bootstrap --hoist",
     "build": "npm run build:typescript -- --verbose",
     "build:typescript": "tsc --build packages/**/tsconfig.json",
     "clean": "del-cli packages/*/node_modules packages/*/package-lock.json && npm run clean:typescript",
     "clean:typescript": "npm run build:typescript -- --clean",
-    "dev": "polyserve --npm --module-resolution=node",
     "watch": "npm run build:typescript -- -w",
-    "update": "lerna-update-wizard"
+    "storybook": "npm --prefix stories run build-storybook"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@webcomponents/webcomponentsjs": "^2.4.0",
     "ajv": "^6.10.2",
-    "del-cli": "^2.0.0",
-    "lerna": "^3.16.4",
-    "lerna-update-wizard": "^0.16.0",
+    "del-cli": "^3.0.0",
+    "lerna": "^3.19.0",
+    "lerna-update-wizard": "^0.17.5",
     "lodash.camelcase": "^4.3.0",
-    "polyserve": "^0.27.15",
-    "rollup": "^1.19.3",
+    "rollup": "^1.27.5",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-filesize": "^6.1.1",
+    "rollup-plugin-filesize": "^6.2.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-progress": "^1.1.1",
     "rollup-plugin-size-snapshot": "^0.10.0",
     "rollup-plugin-sizes": "^0.5.1",
-    "rollup-plugin-terser": "^5.1.1",
+    "rollup-plugin-terser": "^5.1.2",
     "tslib": "^1.10.0"
   },
   "_later": {
