--- a/stories/package.json
+++ b/stories/package.json
@@ -6,32 +6,32 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook -o ../public"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "typescript": "^3.5.3"
+    "typescript": "^3.7.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@codin/cwc-intersection": "^0.1.0",
     "@codin/cwc-picture": "^0.1.0",
-    "@storybook/addon-a11y": "^5.1.10",
-    "@storybook/addon-actions": "^5.1.10",
+    "@storybook/addon-a11y": "^5.2.6",
+    "@storybook/addon-actions": "^5.2.6",
     "@storybook/addon-console": "^1.2.1",
-    "@storybook/addon-knobs": "^5.1.10",
-    "@storybook/addon-links": "^5.1.10",
-    "@storybook/addon-notes": "^5.1.10",
-    "@storybook/addon-storysource": "^5.1.10",
-    "@storybook/addon-viewport": "^5.1.10",
-    "@storybook/polymer": "^5.1.10",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "@storybook/addon-knobs": "^5.2.6",
+    "@storybook/addon-links": "^5.2.6",
+    "@storybook/addon-notes": "^5.2.6",
+    "@storybook/addon-storysource": "^5.2.6",
+    "@storybook/addon-viewport": "^5.2.6",
+    "@storybook/polymer": "^5.2.6",
+    "@webcomponents/webcomponentsjs": "^2.4.0",
     "babel-loader": "^8.0.6",
-    "lit-html": "^1.1.1",
+    "lit-html": "^1.1.2",
     "polymer-webpack-loader": "^2.0.3"
   }
 }
