--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm --prefix stories install
+      - run: npm run bootstrap
       - run: npm --prefix stories run build-storybook
