--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -11,4 +11,4 @@ jobs:
         with:
           node-version: 12
       - run: npm run bootstrap
-      - run: npm --prefix stories run build-storybook
+      - run: npm run storybook
