--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "es2015",
+    "module": "esnext",
     "moduleResolution": "node",
     "lib": ["esnext", "dom", "dom.iterable"],
     "declaration": true,
     "sourceMap": true,
     "inlineSources": true,
+    "noEmit": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
@@ -24,7 +25,8 @@
       {
         "name": "typescript-lit-html-plugin"
       }
-    ]
+    ],
   },
+  "include": ["./global.d.ts"],
   "exclude": [],
 }
