fix: updated elements

--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,10 @@
 *.log
 node_modules
 packages/*/package-lock.json
+packages/*/*.tsbuildinfo*
 packages/*/build
 packages/*/dist
 packages/*/lib
-packages/*/assets
-packages/*/*.d.ts
-packages/*/*.js
-packages/*/*.map
 
 elements
 utils
