--- a/packages/intersection/package.json
+++ b/packages/intersection/package.json
@@ -5,9 +5,9 @@
   "author": "Odin thomas Rochmann",
   "license": "MIT",
   "private": false,
-  "main": "lib/intersection-element.js",
-  "module": "lib/intersection-element.js",
-  "browser": "dist/intersection-element.js",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "browser": "dist/index.js",
   "engines": {
     "node": ">=8.0.0"
   },
@@ -23,13 +23,12 @@
     "access": "public"
   },
   "scripts": {
-    "build": "rollup -c",
-    "bundle": "rollup -c --environment bundle",
-    "prepack": "npm run build && npm run bundle"
+    "build": "tsc -b",
+    "prepack": "rollup -c ../rollup.config.js"
   },
   "dependencies": {
     "custom-event-polyfill": "^1.0.7",
     "intersection-observer": "^0.7.0",
-    "lit-element": "2.2.1"
+    "lit-element": "2.3.1"
   }
 }
