--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
+    "target": "ES6",
+    "module": "ES6",
     "moduleResolution": "node",
     "lib": ["esnext", "dom", "dom.iterable"],
     "declaration": true,
-    "sourceMap": true,
-    "inlineSources": true,
-    "noEmit": true,
+    "inlineSourceMap": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
@@ -15,18 +13,19 @@
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "strict": true,
-    "baseUrl": ".",
+    "baseUrl": "./packages",
     "paths": {
       "@codin/cwc-*": ["./*/src"]
     },
     "noEmitHelpers": true,
     "importHelpers": true,
-    "plugins": [
-      {
-        "name": "typescript-lit-html-plugin"
-      }
-    ],
+    "composite": true,
   },
-  "include": ["./global.d.ts"],
-  "exclude": [],
+  "include": [
+    "src/*.ts"
+  ],
+  "references": [
+    {"path": "intersection"},
+    {"path": "picture"}
+  ]
 }
