--- a/packages/intersection/tsconfig.json
+++ b/packages/intersection/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "target": "ESNext",
     "rootDir": "src",
-    "outDir": ".",
+    "outDir": "lib",
   },
   "include": [
-    "src/**/*.ts",
+    "src/*.ts"
   ],
 }
