--- a/packages/picture/tsconfig.json
+++ b/packages/picture/tsconfig.json
@@ -2,9 +2,14 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": ".",
+    "outDir": "lib"
   },
   "include": [
-    "src/**/*.ts",
+    "src/*.ts"
   ],
+  "references": [
+    {
+      "path": "../intersection"
+    }
+  ]
 }
