--- a/packages/picture/package.json
+++ b/packages/picture/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codin/cwc-picture",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "author": "Odin thomas Rochmann",
   "license": "MIT",
@@ -27,7 +27,7 @@
     "prepack": "rollup -c ../rollup.config.js"
   },
   "dependencies": {
-    "@codin/cwc-intersection": "0.1.0",
+    "@codin/cwc-intersection": "^0.2.0",
     "lit-element": "2.3.1",
     "lit-html": "^1.2.1"
   }
