--- a/packages/picture/package.json
+++ b/packages/picture/package.json
@@ -7,7 +7,6 @@
   "private": false,
   "main": "lib/index.js",
   "module": "lib/index.js",
-  "browser": "dist/index.js",
   "engines": {
     "node": ">=8.0.0"
   },
@@ -24,11 +23,13 @@
   },
   "scripts": {
     "build": "tsc",
-    "prepack": "rollup -c ../rollup.config.js"
+    "prepack": "npx rollup -c ../rollup.config.js"
+  },
+  "peerDependencies": {
+    "lit-element": "2.3.x",
+    "lit-html": "1.2.x"
   },
   "dependencies": {
-    "@codin/cwc-intersection": "^0.2.0",
-    "lit-element": "2.3.1",
-    "lit-html": "^1.2.1"
+    "@codin/cwc-intersection": "^0.2.0"
   }
 }
