--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "strict": true,
     "baseUrl": "./packages",
     "paths": {
-      "@codin/cwc-*": ["./*/src"]
+      "@codin/cwc-*": ["./packages/*/src"]
     },
     "noEmitHelpers": true,
     "importHelpers": true,
@@ -24,8 +24,9 @@
   "include": [
     "src/*.ts"
   ],
+  "exclude": ["node_modules"],
   "references": [
-    {"path": "intersection"},
-    {"path": "picture"}
+    {"path": "packages/intersection"},
+    {"path": "packages/picture"}
   ]
 }
