--- a/lerna.json
+++ b/lerna.json
@@ -1,14 +1,21 @@
 {
   "lerna": "2.11.0",
+  "version": "independent",
   "packages": [
     "packages/*"
   ],
   "command": {
+    "publish": {
+      "ignoreChanges": ["ignored-file", "*.md"]
+    },
+    "version": {
+      "allowBranch": ["master", "feature/*"]
+    },
     "bootstrap": {
       "npmClientArgs": [
         "--no-package-lock"
       ]
     }
   },
-  "version": "0.3.0"
+  "ignoreChanges": ["**/__fixtures__/**", "**/__tests__/**", "**/*.md"]
 }
