--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "prepack": "npm run build"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "del-cli": "^3.0.0",
     "lerna": "^3.20.2",
+    "lerna-update-wizard": "^0.17.8",
     "lit-element": "2.3.1",
     "lit-html": "^1.2.1",
     "lodash.camelcase": "^4.3.0",
@@ -40,5 +43,8 @@
   },
   "_later": {
     "doc": "typedoc --target es6 --mode modules --excludeNotExported --excludePrivate --ignoreCompilerErrors --out ./docs src"
+  },
+  "dependencies": {
+    "prettier": "^2.0.2"
   }
 }
