--- a/packages/code-highlight/package.json
+++ b/packages/code-highlight/package.json
@@ -1,28 +1,24 @@
 {
-  "name": "@codin/cwc-picture",
-  "version": "0.3.0",
-  "description": "",
+  "name": "@codin/cwc-code-highlight",
+  "version": "0.0.0",
+  "description": "Element for highlighting code",
   "author": "Odin thomas Rochmann",
   "license": "MIT",
   "private": false,
-  "main": "lib/index.js",
-  "module": "lib/index.js",
+  "main": "lib/code-highlight.js",
   "engines": {
     "node": ">=8.0.0"
   },
-  "files": [
-    "dist",
-    "lib"
-  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/odinr/codin/packages/picture/"
+    "url": "https://github.com/odinr/codin/packages/code-highlight/"
   },
   "publishConfig": {
     "access": "public"
   },
+  "files": ["dist", "lib"],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -b",
     "prepack": "npx rollup -c ../rollup.config.js"
   },
   "peerDependencies": {
@@ -30,9 +26,12 @@
     "lit-html": "1.2.x"
   },
   "dependencies": {
-    "@codin/cwc-intersection": "^0.3.0"
+    "parse-numeric-range": "0.0.2",
+    "prismjs": "^1.19.0"
   },
   "devDependencies": {
+    "@rollup/plugin-legacy": "^2.0.0",
+    "@types/prismjs": "^1.16.0",
     "rollup": "2.7.6"
   }
 }
