--- a/packages/code-highlight/tsconfig.json
+++ b/packages/code-highlight/tsconfig.json
@@ -2,14 +2,10 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "lib"
+    "outDir": "./lib",
+    "allowJs": true
   },
   "include": [
     "src/**/*"
   ],
-  "references": [
-    {
-      "path": "../intersection"
-    }
-  ]
 }
