--- a/packages/intersection/package.json
+++ b/packages/intersection/package.json
@@ -33,5 +33,8 @@
     "custom-event-polyfill": "^1.0.7",
     "fast-deep-equal": "^3.1.1",
     "intersection-observer": "^0.7.0"
+  },
+  "devDependencies": {
+    "rollup": "2.7.6"
   }
 }
