--- a/packages/intersection/tsconfig.json
+++ b/packages/intersection/tsconfig.json
@@ -2,9 +2,9 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "lib",
+    "outDir": "./lib",
   },
   "include": [
-    "src/*.ts"
+    "src/**/*.ts"
   ],
 }
