--- a/stories/package.json
+++ b/stories/package.json
@@ -4,32 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "storybook": "start-storybook -s ./public,./static -p 6006",
-    "build-storybook": "build-storybook -o ../docs"
+    "start": "start-storybook -s ./public,./static -p 6006",
+    "build": "build-storybook -s ./static"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.9.6",
+    "@codin/cwc-code-highlight": "../packages/code-highlight",
     "@codin/cwc-intersection": "../packages/intersection",
     "@codin/cwc-picture": "../packages/picture",
-    "@storybook/addon-a11y": "^5.3.17",
-    "@storybook/addon-actions": "^5.3.17",
-    "@storybook/addon-backgrounds": "^5.3.17",
-    "@storybook/addon-console": "^1.2.1",
-    "@storybook/addon-docs": "^5.3.17",
-    "@storybook/addon-info": "^5.3.17",
-    "@storybook/addon-knobs": "^5.3.17",
-    "@storybook/addon-links": "^5.3.17",
-    "@storybook/addon-notes": "^5.3.17",
-    "@storybook/addon-storysource": "^5.3.17",
-    "@storybook/addon-viewport": "^5.3.17",
-    "@storybook/web-components": "^5.3.17",
+    "@storybook/addon-backgrounds": "^5.3.18",
+    "@storybook/addon-knobs": "^5.3.18",
+    "@storybook/web-components": "^5.3.18",
     "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^5.1.1",
     "file-loader": "^6.0.0",
-    "react-docgen-typescript-loader": "^3.7.1",
-    "ts-loader": "^6.2.2"
+    "lit-element": "^2.3.1",
+    "lit-html": "^1.2.1",
+    "prismjs": "^1.20.0",
+    "ts-loader": "^7.0.2"
   },
   "dependencies": {}
 }
