--- a/packages/code-highlight/package.json
+++ b/packages/code-highlight/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codin/cwc-code-highlight",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Element for highlighting code",
   "author": "Odin thomas Rochmann",
   "license": "MIT",
@@ -16,7 +16,10 @@
   "publishConfig": {
     "access": "public"
   },
-  "files": ["dist", "lib"],
+  "files": [
+    "dist",
+    "lib"
+  ],
   "scripts": {
     "build": "tsc -b",
     "prepack": "npx rollup -c ../rollup.config.js"
