--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
   "references": [
     {"path": "./packages/code-highlight"},
     {"path": "./packages/intersection"},
-    {"path": "./packages/picture"}
+    {"path": "./packages/picture"},
+    {"path": "./packages/runkit"}
   ]
 }
