--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "npm run build:typescript -- --verbose",
     "build:typescript": "tsc -b",
     "build:storybook": "npm --prefix stories run build",
-    "postbuild:storybook": "git add -u docs && git commit -m 'doc: update docs 📑'",
+    "postbuild:storybook": "git add docs && git commit -m 'doc: update docs 📑'",
     "prepack": "npm run build"
   },
   "devDependencies": {
