--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,4 +25,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - run: npx lerna publish --no-git-reset --yes
+    - run: npx lerna bootstrap --hoist
+    - name: Publish to NPM
+        run: npx lerna publish --yes
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
