--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,6 +27,6 @@ jobs:
     - run: npm ci
     - run: npx lerna bootstrap --hoist
     - name: Publish to NPM
-      run: npx lerna publish --yes
+      run: npx lerna publish -y 
       env:
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
