--- a/packages/code-highlight/package.json
+++ b/packages/code-highlight/package.json
@@ -32,8 +32,6 @@
     "prismjs": "^1.20.0"
   },
   "devDependencies": {
-    "@rollup/plugin-legacy": "^2.0.0",
-    "@types/prismjs": "^1.16.1",
-    "rollup": "2.10.4"
+    "@types/prismjs": "^1.16.1"
   }
 }
