--- a/packages/code-highlight/package.json
+++ b/packages/code-highlight/package.json
@@ -2,6 +2,7 @@
   "name": "@codin/cwc-code-highlight",
   "version": "0.1.12",
   "description": "Element for highlighting code",
+  "keywords": ["prismjs", "highlight", "web component", "lit-html", "lit-element", "code", "preview", "syntax"],
   "author": "Odin thomas Rochmann",
   "license": "MIT",
   "private": false,
