--- a/packages/picture/package.json
+++ b/packages/picture/package.json
@@ -1,8 +1,16 @@
 {
   "name": "@codin/cwc-picture",
-  "version": "0.3.7",
+  "version": "0.3.8",
   "description": "Web component for displaying images",
-  "keywords": ["web component", "lit-html", "lit-element", "picture", "image", "lazy load", "scaling"],
+  "keywords": [
+    "web component",
+    "lit-html",
+    "lit-element",
+    "picture",
+    "image",
+    "lazy load",
+    "scaling"
+  ],
   "author": "Odin thomas Rochmann",
   "license": "MIT",
   "private": false,
