--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,8 @@
   "lerna": "2.11.0",
   "version": "independent",
   "packages": [
-    "packages/*"
+    "packages/*",
+    "utils/*"
   ],
   "command": {
     "publish": {
