story: added story for grid

--- a/stories/package.json
+++ b/stories/package.json
@@ -16,6 +16,7 @@
     "@codin/cwc-intersection": "../packages/intersection",
     "@codin/cwc-picture": "../packages/picture",
     "@codin/cwc-runkit": "../packages/runkit",
+    "@codin/mwc-grid": "../packages/mwc-grid",
     "@storybook/addon-backgrounds": "^5.3.18",
     "@storybook/addon-knobs": "^5.3.18",
     "@storybook/web-components": "^5.3.18",
