--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build:storybook": "npm --prefix stories run build",
     "prepublish": "lerna bootstrap --hoist",
     "prepack": "npm run build",
-    "postpublish": "npm run build:storybook"
+    "postpublish": "npm run build:storybook",
+    "force-publish": "lerna publish patch --force-publish"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^12.0.0",
